--- a/mssc-brewery-client/src/main/resources/application.properties
+++ b/mssc-brewery-client/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 sfg.brewery.apiHost=http://localhost:8080
 
 logging.level.org.apache.http=ERROR
+
+sfg.maxtotalconnections=100
+sfg.defaultmaxperroute=20
+sfg.connectionrequesttimeout=3000
+sfg.sockettimeout=3000
